new paper and final studies

--- a/paper/main.bib
+++ b/paper/main.bib
@@ -1,114 +1,162 @@
-@article{Yuan2020,
+@article{Joel2013,
 archivePrefix = {arXiv},
-author = {Yuan, Xiao and Sun, Jinzhao and Liu, Junyu and Zhao, Qi and Zhou, You},
-journal = {Phys. Rev. Lett.},
-number = {4},
-publisher = {American Physical Society},
-title = {{Quantum simulation with hybrid tensor networks}},
-volume = {127},
-year = {2020}
-}
-
-
-@article{Khaneja2005,
-author = {Khaneja, Navin and Reiss, Timo and Kehlet, Cindie and Schulte-Herbruggen, Thomas and Glaser, Steffen J.},
-issn = {1090-7807},
-journal = {J. Magn. Reson.},
-month = {feb},
-number = {2},
-pages = {296--305},
-pmid = {15649756},
-publisher = {Academic Press},
-title = {{Optimal control of coupled spin dynamics: design of NMR pulse sequences by gradient ascent algorithms}},
-volume = {172},
-year = {2005}
-}
-
-@article{DeFouquieres2011,
-author = {{De Fouquieres}, P. and Schirmer, S. G. and Glaser, S. J. and Kuprov, Ilya},
-journal = {J. Magn. Reson.},
-month = {oct},
-number = {2},
-pages = {412--417},
-pmid = {21885306},
-publisher = {Academic Press},
-title = {{Second order gradient ascent pulse engineering}},
-volume = {212},
-year = {2011}
-}
-
-@article{Feng2018,
-archivePrefix = {arXiv},
-author = {Feng, Guanru and Cho, Franklin H. and Katiyar, Hemant and Li, Jun and Lu, Dawei and Baugh, Jonathan and Laflamme, Raymond},
-journal = {Phys. Rev. A},
+arxivId = {1209.0115},
+author = {Joel, Kira and Kollmar, Davida and Santos, Lea F.},
+doi = {10.1119/1.4798343},
+issn = {0002-9505},
+journal = {Am. J. Phys.},
+keywords = {Heisenberg model,physics education,spin dynamics},
 month = {may},
-number = {5},
-publisher = {American Physical Society},
-title = {{Gradient-based closed-loop quantum optimal control in a solid-state two-qubit system}},
-volume = {98},
-year = {2018}
+number = {6},
+pages = {450},
+publisher = {American Association of Physics TeachersAAPT},
+title = {{An introduction to the spectrum, symmetries, and dynamics of spin-1/2 Heisenberg chains}},
+volume = {81},
+year = {2013}
 }
 
-@article{Biamonte2020,
-archivePrefix = {arXiv},
-arxivId = {1912.10049},
-note = {{a}rXiv:1912.10049 [quant-ph]},
-author = {Biamonte, Jacob},
-title = {{Lectures on Quantum Tensor Networks a pathway to modern diagrammatic reasoning}},
-year = {2020}
-}
-
-@article{Suzuki1976,
-author = {Suzuki, Masuo},
-journal = {Commun. Math. Phys.},
-pages = {183--190},
-title = {{Generalized Trotter's Formula and Systematic Approximants of Exponential Operators and Inner Derivations with Applications to Many-Body Problems}},
-volume = {51},
-year = {1976}
-}
-
-@article{Barthel,
-archivePrefix = {arXiv},
-arxivId = {1901.04974v2},
-note = {{a}rXiv:1901.04974v2 [quant-ph]},
-author = {Barthel, Thomas and Zhang, Yikang},
-title = {{Optimized Lie-Trotter-Suzuki decompositions for two and three non-commuting terms}},
-year = {2019}
-}
-
-@incollection{Hatano2005,
-address = {Berlin, Heidelberg},
-author = {Hatano, Naomichi and Suzuki, Masuo},
-booktitle = {Quantum Annealing Other Optim. Methods},
-editor = {{Das A.}, K. and B., Chakrabarti},
-pages = {37--68},
-publisher = {Springer},
-title = {{Finding Exponential Product Formulas of Higher Orders}},
-year = {2005}
-}
-
-@book{Nocedal2006,
-address = {New York},
-author = {Nocedal, Jorge and Wright, Stephen J.},
-edition = {2},
-editor = {Mikosch, Thomas V. and Resnick, Sidney I. and Robinson, Stephen M.},
-publisher = {Springer},
-title = {{Numerical Optimization}},
-year = {2006}
-}
-
-@article{Bhole2018,
-archivePrefix = {arXiv},
-arxivId = {1802.07147},
-author = {Bhole, Gaurav and Jones, Jonathan A.},
-issn = {2095-0470},
-journal = {Front. Phys. 2018 133},
-month = {may},
+@article{Lieb1961,
+author = {Lieb, Elliott and Schultz, Theodore and Mattis, Daniel},
+doi = {10.1016/0003-4916(61)90115-4},
+issn = {0003-4916},
+journal = {Ann. Phys.},
+month = {dec},
 number = {3},
-pages = {1--6},
+pages = {407--466},
+publisher = {Academic Press},
+title = {{Two soluble models of an antiferromagnetic chain}},
+volume = {16},
+year = {1961}
+}
+
+
+@article{Maziero2017,
+archivePrefix = {arXiv},
+arxivId = {1601.07458},
+author = {Maziero, Jonas},
+doi = {10.1142/S012918311750005X},
+issn = {01291831},
+journal = {Int. J. Mod. Phys. C},
+number = {1},
+pages = {1750005},
+publisher = {World Scientific Publishing Company},
+title = {{Computing partial traces and reduced density matrices}},
+volume = {28},
+year = {2017}
+}
+
+@article{Sandvik2010,
+archivePrefix = {arXiv},
+arxivId = {1101.3281},
+author = {Sandvik, Anders W.},
+doi = {10.1063/1.3518900},
+isbn = {9780735408517},
+issn = {0094243X},
+journal = {AIP Conf. Proc.},
+month = {nov},
+number = {1},
+pages = {135--338},
+publisher = {American Institute of PhysicsAIP},
+title = {{Computational studies of quantum spin systems}},
+volume = {1297},
+year = {2010}
+}
+
+@article{Jung2020,
+archivePrefix = {arXiv},
+arxivId = {2004.12757},
+author = {Jung, Jung Hoon and Noh, Jae Dong},
+doi = {10.3938/JKPS.76.670},
+issn = {1976-8524},
+journal = {J. Korean Phys. Soc. 2020 768},
+month = {apr},
+number = {8},
+pages = {670--683},
 publisher = {Springer},
-title = {{Practical pulse engineering: Gradient ascent without matrix exponentiation}},
-volume = {13},
+title = {{Guide to Exact Diagonalization Study of Quantum Thermalization}},
+volume = {76},
+year = {2020}
+}
+
+@unpublished{DeLeeuw2013,
+author = {de Leeuw, Marius and Candu, Constantin},
+institution = {Institute for Theoretical Physics (Karlsruhe)},
+title = {{Introduction to Integrability}},
+url = {https://edu.itp.phys.ethz.ch/fs13/int/},
+year = {2013}
+}
+
+@book{Lehoucq1998,
+author = {Lehoucq, R. B. and Sorensen, D. C. and Yang, C.},
+doi = {10.1137/1.9780898719628},
+publisher = {Society for Industrial and Applied Mathematics},
+title = {{ARPACK Users' Guide}},
+year = {1998}
+}
+
+@incollection{Franchini2016,
+archivePrefix = {arXiv},
+arxivId = {1609.02100},
+author = {Franchini, Fabio},
+booktitle = {Lect. Notes Phys.},
+doi = {10.1007/978-3-319-48487-7},
+month = {sep},
+publisher = {Springer},
+title = {{An introduction to integrable techniques for one-dimensional quantum systems}},
+url = {http://arxiv.org/abs/1609.02100 http://dx.doi.org/10.1007/978-3-319-48487-7},
+volume = {940},
+year = {2016}
+}
+
+@article{Luitz2014,
+archivePrefix = {arXiv},
+arxivId = {1411.0660v2},
+author = {Luitz, David J. and Laflorencie, Nicolas and Alet, Fabien},
+doi = {10.1103/PhysRevB.91.081103},
+journal = {Phys. Rev. B - Condens. Matter Mater. Phys.},
+month = {nov},
+number = {8},
+publisher = {American Physical Society},
+title = {{Many-body localization edge in the random-field Heisenberg chain}},
+url = {http://arxiv.org/abs/1411.0660 http://dx.doi.org/10.1103/PhysRevB.91.081103},
+volume = {91},
+year = {2014}
+}
+
+@article{Abanin2018,
+archivePrefix = {arXiv},
+arxivId = {1804.11065v2},
+author = {Abanin, Dmitry A. and Altman, Ehud and Bloch, Immanuel and Serbyn, Maksym},
+doi = {10.1103/RevModPhys.91.021001},
+journal = {Rev. Mod. Phys.},
+number = {2},
+publisher = {American Physical Society},
+title = {{Many-body localization, thermalization, and entanglement}},
+url = {http://arxiv.org/abs/1804.11065 http://dx.doi.org/10.1103/RevModPhys.91.021001},
+volume = {91},
 year = {2018}
 }
 
+
+@article{Cole2017,
+archivePrefix = {arXiv},
+arxivId = {1702.02664},
+author = {Cole, Richard and Pollmann, Frank and Betouras, Joseph J.},
+doi = {10.1103/PHYSREVB.95.214410/FIGURES/12/MEDIUM},
+issn = {24699969},
+journal = {Phys. Rev. B},
+number = {21},
+pages = {214410},
+publisher = {American Physical Society},
+title = {{Entanglement scaling and spatial correlations of the transverse-field Ising model with perturbations}},
+url = {https://journals-aps-org.proxy.lib.uwaterloo.ca/prb/abstract/10.1103/PhysRevB.95.214410},
+volume = {95},
+year = {2017}
+}
+
+@misc{eigen,
+author = {Gael Guennebaud and Benoit Jacob and others},
+title = {Eigen v3},
+howpublished = {http://eigen.tuxfamily.org},
+year = {2010}
+}
