corrections to paper

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -370,7 +370,7 @@ Therefore, the studies of the entanglement entropy with bipartition size and sys
 
 
 \newpage
-\section{Entanglement Entropy and Central Charges}
+\section{Many Body Localization}
 We now investigate the ferromagnetic Heisenberg model with $\Delta/J_{\perp} = 1$, with local random longitudinal fields $h$
 \begin{align}
   H_{\textrm{H}} =&~ -J\sum_{<ij>} S_{i} \cdot S_{j} - \sum_{i} h_{i}S^{z}_{i}, \label{eq:heisenberg_hamiltonian}
